`call_args` and `call_args_list`. These could be removed or raise errors on
getting / setting. They also have the `assert_called_with` and
`assert_called_once_with` methods. Removing these would be pointless as
fetching them would create a mock (attribute) that could be called without
error.


CHANGELOG
=========

2011/XX/XX Version 0.8.0 alpha 3
--------------------------------

* BUGFIX: Fixed bug in `patch.multiple` for argument passing when creating
  mocks
* Added the public `instance` argument to `create_autospec`
* Support for using Java exceptions as mock `side_effect` on Jython


2011/07/16 Version 0.8.0 alpha 2
--------------------------------

* `patch.multiple` for doing multiple patches in a single call, using keyword
  arguments
* New `new_callable` argument to `patch` and `patch.object` allowing you to
  pass in a class or callable object (instead of `MagicMock`) that will be
  called to replace the object being patched
* Addition of `NonCallableMock` and `NonCallableMagicMock`, mocks without a
  `__call__` method
* Mocks created by `patch` have a `MagicMock` as the `return_value` where a
  class is being patched
* `create_autospec` can create non-callable mocks for non-callable objects.
  `return_value` mocks of classes will be non-callable unless the class has
  a `__call__` method
* `autospec` creates a `MagicMock` without a spec for properties and slot
  descriptors, because we don't know the type of object they return
* Removed the "inherit" argument from `create_autospec`
* Calling `stop` on an unstarted patcher fails with  a more meaningful error
  message
* BUGFIX: an error creating a patch, with nested patch decorators, won't leave
  patches in place
* BUGFIX: `__truediv__` and `__rtruediv__` not available as magic methods on
  mocks in Python 3
* BUGFIX: `assert_called_with` / `assert_called_once_with` can be used with
  `self` as a keyword argument
* BUGFIX: autospec for functions / methods with an argument named self that