@@ -73,10 +73,12 @@ CHANGELOG
 2011/XX/XX Version 0.8.0 alpha 3
 --------------------------------
 
+* Improved failure messages for `assert_called_with` and
+  `assert_called_once_with`
 * BUGFIX: Fixed bug in `patch.multiple` for argument passing when creating
   mocks
 * Added the public `instance` argument to `create_autospec`
-* Support for using Java exceptions as mock `side_effect` on Jython
+* Support for using Java exceptions as a `side_effect` on Jython
 
 
 2011/07/16 Version 0.8.0 alpha 2
